# Sqrtspace

./: 2502.17779v1.txt  2504.20950v1.txt  3618260.3649664.txt  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  sqrtspace_streams_spec.md
.github/workflows/: ci.yml
bench/: bench_audio.py  plot_bench.py  plot_memory.py
src/sqrtspace_streams/: __init__.py  autotune.py  cache.py  cli.py  metrics.py  pipeline.py
src/sqrtspace_streams.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sqrtspace_streams/adapters/: numpy_backend.py
tests/: test_equivalence.py  test_pipeline.py
