[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqrtspace-streams"
version = "0.1.0a0"
description = "Streaming pipeline with sqrt-time-style recompute, selective checkpointing, and auto-fallback"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "SqrtSpace" }
]
dependencies = [
  "numpy>=1.23",
  "psutil>=5.9",
  "platformdirs>=3.0",
  "tqdm>=4.65",
  "rich>=13.0",
  "typing-extensions>=4.5"
]

[project.optional-dependencies]
numba = ["numba>=0.57"]
cupy = ["cupy-cuda12x>=12.0"]
data = ["pandas>=2.0", "pyarrow>=14.0", "scipy>=1.10", "soundfile>=0.12"]
bench = ["pyperf>=2.6"]

[project.urls]
Homepage = "https://github.com/"

[project.scripts]
sqrtspace = "sqrtspace_streams.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


